fix bug: vertical align for Apply on Scientific Publications

--- a/cms_frontend/css/custom.css
+++ b/cms_frontend/css/custom.css
@@ -2139,7 +2139,8 @@ border: 1px solid #E3E3E3;
 border-radius: 4px;
 }
 
-.page-meetings-related-meetings .views-exposed-form .form-submit {
+.page-meetings-related-meetings .views-exposed-form .form-submit,
+.page-publications-scientific-publications .views-exposed-form .form-submit {
 margin-top: 26px;
 }
 
